--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
+    "css-loader": "^0.28.11",
+    "style-loader": "^0.20.3",
     "webpack": "^4.2.0",
     "webpack-cli": "^2.0.13"
+  },
+  "dependencies": {
+    "monaco-editor": "^0.11.1"
   }
 }
