--- a/package.json
+++ b/package.json
@@ -5,21 +5,13 @@
   "repository": "https://github.com/tholman/tutorial-markdown.git",
   "author": "Tim Holman <timothy.w.holman@gmail.com>",
   "license": "MIT",
-  "scripts": {
-    "build": "./node_modules/.bin/webpack",
-    "build:prod": "./node_modules/.bin/webpack -p",
-    "watch": "./node_modules/.bin/webpack --watch"
-  },
+  "scripts": {},
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "css-loader": "^0.28.11",
-    "style-loader": "^0.20.3",
-    "webpack": "^4.2.0",
-    "webpack-cli": "^2.0.13"
+    "babel-core": "^6.26.3",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
+    "rollup": "^0.62.0",
+    "rollup-plugin-babel": "^3.0.7"
   },
-  "dependencies": {
-    "monaco-editor": "^0.11.1"
-  }
+  "dependencies": {}
 }
