--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "author": "Tim Holman <timothy.w.holman@gmail.com>",
   "license": "MIT",
   "scripts": {
-     "build": "NODE_ENV=production rollup -c",
-     "watch": "rollup -c --watch"
+    "build": "NODE_ENV=production rollup -c",
+    "watch": "rollup -c --watch"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "rollup": "^0.62.0",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-eslint": "^4.0.0",
