--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "@babel/preset-env": "^7.6.0",
     "rollup": "^1.21.3",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-eslint": "^7.0.0",
-    "rollup-watch": "^4.3.1"
+    "rollup-plugin-eslint": "^7.0.0"
   },
   "dependencies": {}
 }
